Fix overflow and tabs fill

--- a/src/base.css
+++ b/src/base.css
@@ -17,6 +17,7 @@ p {
 }
 
 main {
+  flex-grow: 1;
   display: flex;
   flex-direction: column;
   padding: 16px;
@@ -43,5 +44,11 @@ button {
 @media screen and (max-width: 480px) {
   main {
     padding-bottom: 54px;
+  }
+}
+
+@media screen and (min-width: 721px) {
+  main {
+    overflow: auto;
   }
 }
