--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -40,11 +40,17 @@
     width: 32px;
     height: 32px;
     border-radius: 8px 8px 0 0;
+  }
+
+  .tabs li svg {
     fill: #273469;
   }
 
   .tabs li.active {
     background-color: #273469;
+  }
+
+  .tabs li.active svg {
     fill: #ffffff;
   }
 
